# health-management

./: .dockerignore  .editorconfig  .env.example  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  CHANGELOG.md  CLAUDE.md  DIAGNOSIS_IMPLEMENTATION_SUMMARY.md  GIT-WORKTREE-STATUS-REPORT.md  README.md  TASK24_COMPLETION_REPORT.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  MONITORING_GUIDE.md  README.md  pyproject.toml  requirements.txt  start.sh  verify_diagnosis_module.py
ai-service/app/: __init__.py  main.py
ai-service/app/api/: __init__.py
ai-service/app/config/: __init__.py  settings.py
ai-service/app/core/: __init__.py  config.py  logger.py
ai-service/app/data/: __init__.py  knowledge_base.py
ai-service/app/middleware/: __init__.py  auth.py  metrics_middleware.py
ai-service/app/models/: __init__.py  agent_models.py  ai_models.py  diagnosis_models.py  rag_models.py  schemas.py
ai-service/app/routers/: __init__.py  ai_router.py  education_router.py
ai-service/app/services/: __init__.py  agent_service.py  ai_service.py  article_service.py  cache_service.py  checkin_parser.py  conversation_service.py  deepseek_client.py  diagnosis_service.py  (+7 more)
ai-service/docs/: DEEPSEEK_INTEGRATION.md  RAG_USAGE.md  TASK14_SUMMARY.md  TASK15_COMPLETION_SUMMARY.md  TASK16_COMPLETION_SUMMARY.md  health_knowledge_data.py  task16-agent-management.md
ai-service/scripts/: import_knowledge.py
ai-service/tests/: __init__.py  conftest.py  performance_test.py  test_ai_api.py  test_ai_service.py  test_analyzer.py  test_config.py  test_deepseek_client.py  test_diagnosis_service.py  test_embedding.py  test_integration_monitoring.py  test_monitoring_and_cache.py  test_prompt_templates.py  test_rag.py  test_rag_embedding.py  test_rag_embedding_simple.py
(+358 files in other folders)
