[project]
name = "ai-service"
version = "0.1.0"
description = "An AI-powered service application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.0",
    "black==23.11.0",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "httpx==0.25.0",
    "langchain==0.1.0",
    "llama-index==0.9.0",
    "loguru==0.7.2",
    "motor==3.3.2",
    "mypy==1.7.0",
    "openai==1.3.0",
    "prometheus-client==0.21.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pyjwt==2.8.0",
    "pymongo==4.5.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "qdrant-client==1.7.0",
    "redis==5.1.1",
    "sentence-transformers==2.2.2",
    "types-requests==2.31.0",
    "uvicorn[standard]==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
